@@ -1,3 +1,13 @@
+1998-09-12  Ben Elliston  <bje@cygnus.com>
+
+	* {most}.c: Include <errno.h> to get POSIX error values.
+
+	* signal.c (pthread_sigmask): Only provide if HAVE_SIGSET_T is
+	defined.
+ 
+	* config.h: #undef features, don't #define them.  This will be
+	generated by autoconf very soon.
+	
 1998-08-11  Ben Elliston  <bje@cygnus.com>
 
 	* Makefile (LIB): Define.
